# studymate_ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
api/: index.py  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  utils.py
app/agents/flashcard/: __init__.py  agent.py
app/agents/notes/: __init__.py  agent.py
app/agents/planner/: __init__.py  agent.py
app/agents/progress/: __init__.py  agent.py
app/agents/quiz/: __init__.py  agent.py
app/api/: schemas.py
app/api/routes/: chat.py  documents.py  flashcards.py  health.py  notes.py  progress.py  quiz.py
app/database/: __init__.py  crud.py  models.py  session.py
app/mcp/: __init__.py  server.py
app/mcp/tools/: __init__.py  generate_quiz.py  parse_text.py  read_docx.py  read_pdf.py  save_notes.py  store_flashcards.py  track_progress.py
app/rag/: __init__.py  chunker.py  embeddings.py  vector_store.py
app/services/: agent_service.py  document_service.py
docs/: API.md  ARCHITECTURE.md  DEMO_SCRIPT.md  INSTALLATION.md  KAGGLE_SUBMISSION.md  USER_GUIDE.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
tests/: conftest.py  test_agents.py  test_api.py  test_database.py  test_integration.py  test_mcp_tools.py  test_rag.py
